Adding and configuring Bff project

--- a/Boat.AppHost/Boat.AppHost.csproj
+++ b/Boat.AppHost/Boat.AppHost.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Boat.ApiService\BoatApp.ApiService.csproj" />
-    <ProjectReference Include="..\Boat.Gateway\Boat.Gateway.csproj" />
+    <ProjectReference Include="..\Boat.Bff\Boat.Bff.csproj" />
     <ProjectReference Include="..\Boat.Web\Boat.Web.csproj" />
   </ItemGroup>
 
